--- a/backend/.env
+++ b/backend/.env
@@ -1,1 +1,3 @@
-
+MONGODB_USERNAME = enter your MONGODB_USERNAME
+MONGODB_PASSWORD = enter your MONGODB_PASSWORD
+MONGODB_URL = enter your mongodb MONGODB_URL
