--- a/backend/package.json
+++ b/backend/package.json
@@ -12,10 +12,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@stripe/stripe-js": "^2.2.0",
+    "apexcharts": "^3.44.0",
     "cors": "^2.8.5",
+    "d3": "^7.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "mongoose": "^8.0.1",
-    "nodemon": "^3.0.1"
+    "nodemon": "^3.0.1",
+    "react-apexcharts": "^1.4.1"
   }
 }
